exports[`Score render Item 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "height": 50,
      "justifyContent": "center",
      "marginBottom": 30
    }
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Montserrat-Regular",
          "fontSize": 22,
          "opacity": 0.8,
          "textAlign": "center"
        }
      ]
    }>
    12
  </Text>
</View>
`;

exports[`Score render List 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row"
    }
  }>
  <ScrollView
    horizontal={true}>
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "flex": 1,
          "flexDirection": "row"
        }
      }>
      <View
        style={
          Object {
            "width": 50
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#FFFFFF",
              "textAlign": "center"
            }
          }>
          0
        </Text>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column"
            }
          }>
          <View />
          <View />
        </View>
      </View>
    </View>
  </ScrollView>
</View>
`;
